<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="restaurant"
        type="com.example.foodyadminpanel.Restaurant" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="15dp"
        tools:context=".restaurantPart.DashBoardFragment"
        tools:ignore="ContentDescription">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="50dp"
            android:text="@{restaurant.name}"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="restaurant name" />


        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            bindImage="@{restaurant.iconImageUrl}"
            app:layout_constraintStart_toEndOf="@id/restaurantName"
            app:layout_constraintBottom_toBottomOf="@id/restaurantName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/restaurantName" />

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView">

            <androidx.cardview.widget.CardView
                android:id="@+id/ordersCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/orders"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_baseline_fastfood_24" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/menuCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/menu"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_outline_restaurant_menu_24" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/infoCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edit_info"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_outline_info_24" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/logOutCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/logout"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_baseline_logout_24" />


            </androidx.cardview.widget.CardView>


        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
